--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "buildcss": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "start": "node app.js"
+    "start": "npm run buildcss && node app.js"
   },
   "author": "",
   "license": "ISC",
