--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   }
